--- a/package.json
+++ b/package.json
@@ -1,9 +1,13 @@
 {
   "name": "lets-lighthouse",
-  "version": "1.0.1",
+  "version": "1.0.4",
   "description": "A beautiful tool to generate lighthouse for batch urls & compare them with ease.",
   "main": "index.js",
   "type": "module",
+  "bin": {
+		"lets-analysis": "./index.js",
+    "lets-compare": "./audit.js"
+	},
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "analysis": "./index.js",
@@ -30,11 +34,9 @@
   },
   "homepage": "https://github.com/rohit0122/lets-lighthouse#readme",
   "devDependencies": {
-    "lighthouse": "^10.1.1",
-    "playwright": "^1.32.3",
-    "playwright-lighthouse": "^3.1.0"
   },
   "dependencies": {
+    "lighthouse": "^10.1.1",
     "chalk": "^5.2.0",
     "chrome-launcher": "^0.15.2",
     "fs": "^0.0.1-security",
