--- a/package.json
+++ b/package.json
@@ -1,17 +1,19 @@
 {
   "name": "lets-lighthouse",
-  "version": "1.0.6",
+  "version": "1.0.7",
   "description": "A beautiful tool to generate lighthouse for batch urls & compare them with ease.",
   "main": "index.js",
   "type": "module",
   "bin": {
-		"lets-analysis": "./index.js",
-    "lets-compare": "./audit.js"
-	},
+    "lets-analysis": "./index.js",
+    "lets-compare": "./audit.js",
+    "lets-compare-csv": "./comparator.js"
+  },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "analysis": "./index.js",
-    "compare": "./audit.js"
+    "lets-analysis": "./index.js",
+    "lets-compare": "./audit.js",
+    "lets-compare-csv": "./comparator.js"
   },
   "repository": {
     "type": "git",
@@ -33,13 +35,14 @@
     "url": "https://github.com/rohit0122/lets-lighthouse/issues"
   },
   "homepage": "https://github.com/rohit0122/lets-lighthouse#readme",
-  "devDependencies": {
-  },
   "dependencies": {
-    "lighthouse": "^10.1.1",
     "chalk": "^5.2.0",
     "chrome-launcher": "^0.15.2",
+    "convert-csv-to-json": "^2.0.0",
     "fs": "^0.0.1-security",
+    "lighthouse": "^10.1.1",
+    "prompt-sync": "^4.2.0",
+    "puppeteer": "^19.11.1",
     "yaml": "^2.2.2"
   }
 }
