--- a/package.json
+++ b/package.json
@@ -1,9 +1,13 @@
 {
   "name": "lets-lighthouse",
-  "version": "1.0.8",
+  "version": "1.1.0",
   "description": "A beautiful tool to generate lighthouse for batch urls & compare them with ease.",
   "main": "index.js",
   "type": "module",
+  "engines" : {
+    "npm" : ">=9.5.1",
+    "node" : ">=19.8.1"
+  },
   "bin": {
     "lets-analysis": "./index.js",
     "lets-compare": "./audit.js",
