--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "lets-lighthouse",
-  "version": "1.1.0",
+  "version": "1.0.9",
   "description": "A beautiful tool to generate lighthouse for batch urls & compare them with ease.",
   "main": "index.js",
   "type": "module",
@@ -27,11 +27,10 @@
     "lighthouse",
     "batcher",
     "comparator",
-    "lighthouse",
-    "batcher",
-    "lighthouse",
-    "comparator",
-    "tools"
+    "tools",
+    "chrome",
+    "devtools",
+    "difftool"
   ],
   "author": "Rohit Shrivastava",
   "license": "ISC",
