--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "lets-lighthouse",
-  "version": "1.1.4",
-  "description": "A beautiful tool to generate lighthouse reports for batch urls & compare them with ease.",
+  "version": "1.1.5",
+  "description": "This tool helps you to generate lighthouse reports for batch URLs & compare them effortlessly.",
   "main": "index.js",
   "type": "module",
   "engines" : {
