--- a/package.json
+++ b/package.json
@@ -1,14 +1,15 @@
 {
   "name": "lets-lighthouse",
-  "version": "1.1.6",
+  "version": "2.0.0",
   "description": "This tool helps you to generate lighthouse reports for batch URLs & compare them effortlessly.",
   "main": "index.js",
   "type": "module",
-  "engines" : {
-    "npm" : ">=9.5.1",
-    "node" : ">=19.8.1"
+  "engines": {
+    "npm": ">=9.8.0",
+    "node": ">=20.5.1"
   },
   "bin": {
+    "lets-crawl": "./crawler.js",
     "lets-analysis": "./index.js",
     "lets-compare": "./audit.js",
     "lets-compare-csv": "./comparator.js",
@@ -16,6 +17,7 @@
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
+    "lets-crawl": "./crawler.js",
     "lets-analysis": "./index.js",
     "lets-compare": "./audit.js",
     "lets-compare-csv": "./comparator.js",
@@ -41,13 +43,17 @@
   },
   "homepage": "https://github.com/rohit0122/lets-lighthouse#readme",
   "dependencies": {
-    "chalk": "^5.2.0",
-    "chrome-launcher": "^0.15.2",
+    "chalk": "^5.3.0",
+    "chrome-launcher": "^1.1.2",
     "convert-csv-to-json": "^2.0.0",
-    "fs": "^0.0.1-security",
-    "lighthouse": "^10.1.1",
+    "lighthouse": "^12.1.0",
     "prompt-sync": "^4.2.0",
-    "puppeteer": "^19.11.1",
-    "yaml": "^2.2.2"
+    "puppeteer": "^22.14.0",
+    "yaml": "^2.5.0"
+  },
+  "devDependencies": {
+    "crawlee": "^3.11.0",
+    "json-2-csv": "^5.5.4",
+    "slug": "^9.1.0"
   }
 }
